--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <title>Document</title>
 </head>
 <body>
-<div id="main">
-
-</div>
+<div id="main"></div>
+<div id="second"></div>
 
 <script src="main.js"></script>
 </body>
