--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <div id="main"></div>
 <div id="second"></div>
 <div id="third"></div>
+<div id="blue"></div>
 
 <script src="main.js"></script>
 </body>
